# LCD_repo

LVGL_PlatformIO_1_480x320/src/: lv_conf.h  main - for screen testing_cpp  my_example.ino  ui.h  ui_Screen1.c  ui_comp.c  ui_comp.h  ui_comp_button1.c  ui_comp_button1.h  ui_comp_hook.c  ui_helpers.h
LVGL_PlatformIO_2_480x320/src/: main.cpp
LVGL_PlatformIO_3_480x320/src/: main.cpp
LVGL_PlatformIO_3_480x320/test_ui/: ui.c
LVGL_PlatformIO_4_480x320/src/: main.cpp  ui.c
LVGL_PlatformIO_800x420_SquareLine/: platformio.ini
LVGL_PlatformIO_800x420_SquareLine/src/: main.cpp  ui.c  ui.h  ui_Screen1.c  ui_comp.h  ui_comp_button1.c  ui_comp_button1.h  ui_comp_hook.h  ui_events.h  ui_helpers.h
LVGL_PlatformIO_800x480/test_ui/: CMakeLists.txt
PanelLan_800x480_image/src/: icon_img.h  main.cpp
PanelLan_800x480_ui/src/: car_img9.h  main.cpp  ui.c  ui_comp.c  ui_comp_hook.c  ui_helpers.c
PanelLan_800x480_ui_ControlPanel/src/: main.cpp  setupWifi.h
PanelLan_800x480_ui_HaPanel_v2/: platformio.ini
PanelLan_800x480_ui_HaPanel_v3/: .gitignore
PanelLan_800x480_ui_MultiControlPanel_v3/src/ui/: CMakeLists.txt  data.c  data.h  filelist.txt  ui.c  ui.h
PanelLan_800x480_ui_MultiControlPanel_v3/src/ui/images/: ui_img_pattern1b1_png.c
PanelLan_800x480_ui_MultiControlPanel_v3/src/ui/screens/: ui_ScreenSwitch.c  ui_ScreenSwitch_Node1.c  ui_ScreenSwitch_Node2.c  ui_ScreenWeather.c
PanelLan_800x480_ui_Switch/: platformio.ini
PanelLan_800x480_ui_Switch_v2/: platformio.ini
TFT_ILI9488_480x320/: platformio.ini
TFT_ILI9488_480x320_Sprite/: platformio.ini
(+178 files in other folders)
